feat(GuildsTimeClient): add startDaemon()